style(CheckoutPage): adjust checkout page and checkout form's ui and structure for uniformity

--- a/frontend/src/styles/tailwind/layers/components.css
+++ b/frontend/src/styles/tailwind/layers/components.css
@@ -117,7 +117,7 @@
   }
 
   .surface-box {
-    @apply bg-surface rounded-lg shadow-xl;
+    @apply bg-surface rounded-lg shadow-lg;
   }
 
   .tag-box {
