feat(ProductTable): add visible tags in tags column

--- a/frontend/src/components/ui/custom/dynamic-table.css
+++ b/frontend/src/components/ui/custom/dynamic-table.css
@@ -29,7 +29,7 @@
      Table Body Rows
   ========================== */
 .table tbody tr {
-  @apply transition-colors duration-300;
+  @apply transition-colors duration-300 border-b;
 }
 
 .table tbody tr:nth-child(even) {
